--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>OST Project!</title>
 </head>
 <body>
     <h1>Hello World</h1>
+    <img src="Screenshot From 2025-09-06 19-45-54.png" alt="No">
     <h1>Bye!</h1>
     
 </body>
